--- a/src/ConfigurationDefs.props
+++ b/src/ConfigurationDefs.props
@@ -31,4 +31,14 @@
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)'=='Mixed_COC'">
+    <ClCompile>
+      <PreprocessorDefinitions>DEBUG;MIXED;COC_EDITION;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)'=='Release_COC'">
+    <ClCompile>
+      <PreprocessorDefinitions>NDEBUG;COC_EDITION;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+  </ItemDefinitionGroup>
 </Project>
